(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --inspection --table --dump))

(rule
 (action
  (with-stdout-to
   parser_messages.ml
   (run menhir --list-errors --compile-errors parser.messages parser.mly))))

(library
 (name odoc_parser)
 (public_name odoc-parser)
 (instrumentation
  (backend landmarks --auto))
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -w -50))
 (libraries astring result camlp-streams menhirLib))
